--- a/prayers.html
+++ b/prayers.html
@@ -53,7 +53,7 @@
     I pray for your dreams to come true, for your health to remain strong, and for your smile to never fade.<br/>
     You are a blessing in my life, and today I send all the love and prayers your way. 🌼
   </p>
-  <img src="assets/dua.jpg" alt="Prayer hands" />
+  <img src="dua.jpg" alt="Prayer hands" />
   <br />
   <a href="index.html">Back to Home</a>
 </body>
